--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,6 +13,12 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    services:
+      deepl-mock-server:
+        image: thibauddemay/deepl-mock:latest
+        ports:
+          - 3000:3000
+
     steps:
     - uses: actions/checkout@v3
 
